--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "npx chromatic --project-token=f0ef55ec3d03"
   },
   "eslintConfig": {
     "extends": [
@@ -64,5 +65,7 @@
     "@storybook/testing-library": "^0.0.13",
     "chromatic": "^6.15.0",
     "prettier": "^2.8.3"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "learnstorybook-design-system-template@0.1.0"
 }
