--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "chromatic": "npx chromatic --project-token=f0ef55ec3d03"
+    "chromatic": "npx chromatic --project-token=f0ef55ec3d03",
+    "test-storybook": "test-storybook"
   },
   "eslintConfig": {
     "extends": [
@@ -53,17 +54,21 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
+    "@storybook/addon-a11y": "^6.5.16",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
     "@storybook/addon-links": "^6.5.16",
     "@storybook/builder-webpack4": "^6.5.16",
+    "@storybook/jest": "^0.0.10",
     "@storybook/manager-webpack4": "^6.5.16",
     "@storybook/node-logger": "^6.5.16",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.5.16",
+    "@storybook/test-runner": "^0.9.3",
     "@storybook/testing-library": "^0.0.13",
     "chromatic": "^6.15.0",
+    "jest": "27",
     "prettier": "^2.8.3"
   },
   "readme": "ERROR: No README data found!",
