--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "learnstorybook-design-system-template",
+  "name": "@smilejin92/learnstorybook-design-system",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env BABEL_ENV=production babel src -d dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
@@ -40,7 +40,16 @@
       }
     ]
   },
-  "babel": {},
+  "babel": {
+    "presets": [
+      [
+        "react-app",
+        {
+          "absoluteRuntime": false
+        }
+      ]
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -54,6 +63,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.20.7",
     "@babel/preset-typescript": "^7.18.6",
     "@storybook/addon-a11y": "^6.5.16",
     "@storybook/addon-actions": "^6.5.16",
@@ -68,10 +78,17 @@
     "@storybook/react": "^6.5.16",
     "@storybook/test-runner": "^0.9.3",
     "@storybook/testing-library": "^0.0.13",
+    "auto": "^10.37.6",
     "chromatic": "^6.15.0",
+    "cross-env": "^7.0.3",
     "jest": "27",
     "prettier": "^2.8.3"
   },
   "readme": "ERROR: No README data found!",
-  "_id": "learnstorybook-design-system-template@0.1.0"
+  "_id": "learnstorybook-design-system-template@0.1.0",
+  "description": "Storybook design systems tutorial",
+  "main": "dist/index.js",
+  "repository": "git@github.com:smilejin92/learnstorybook-design-system.git",
+  "author": "smilejin92 <smilejin92@gmail.com>",
+  "license": "MIT"
 }
